--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "type-check": "vue-tsc --build",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "dependencies": {
     "@vueuse/motion": "^2.2.6",
     "lucide-vue-next": "^0.473.0",
-    "normalize.css": "^8.0.1",
     "portfolio": "file:",
     "vue": "^3.5.13"
   },
@@ -23,7 +24,9 @@
     "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "normalize.css": "^8.0.1",
     "npm-run-all2": "^7.0.2",
+    "prettier": "^3.4.2",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
