--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lint:fix": "prettier --write ."
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.3",
     "@vueuse/motion": "^2.2.6",
     "lucide-vue-next": "^0.473.0",
     "portfolio": "file:",
+    "tailwindcss": "^4.0.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
