--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "lint:fix": "prettier --write ."
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.5",
     "@tailwindcss/vite": "^4.0.3",
     "@vueuse/motion": "^2.2.6",
     "lucide-vue-next": "^0.473.0",
     "portfolio": "file:",
+    "primevue": "^4.2.5",
     "tailwindcss": "^4.0.3",
     "vue": "^3.5.13"
   },
